--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,14 +19,11 @@
 @import "powered-by.scss";
 @import "social-networks.scss";
 @import "page-form.scss";
+@import "page-form-header.scss";
 @import "form.scss";
 @import "form-promo.scss";
-@import "personal-datas";
-@import "contact-information.scss";
-@import "impression.scss";
-@import "landmarks.scss";
-@import "comment.scss";
 @import "page-photo.scss";
+@import "page-photo-header.scss";
 @import "player-controls.scss";
 @import "video-gallery.scss";
 @import "photo-promo.scss";
