--- a/source/sass/text.scss
+++ b/source/sass/text.scss
@@ -20,26 +20,26 @@
   font-size: 21px;
 }
 
-.text--line-height--10px {
+.text--line-height--think {
   line-height: 10px;
 }
 
-.text--line-height--15px {
+.text--line-height--light {
   line-height: 15px;
 }
 
-.text--line-height--21px {
+.text--line-height--medium {
   line-height: 21px;
 }
 
-.text--line-height--24px {
+.text--line-height--big {
   line-height: 24px;
 }
 
-.text--line-height--26px {
+.text--line-height--large {
   line-height: 26px;
 }
 
-.text--line-height--40px {
+.text--line-height--huge {
   line-height: 40px;
 }
