--- a/source/sass/page-footer.scss
+++ b/source/sass/page-footer.scss
@@ -6,17 +6,20 @@
 .page-footer__hashtag-sedona {
   display: block;
   text-align: center;
-  margin-top: 40px;
+  margin-top: 33px;
 }
 
 .page-footer__powered-by {
-  margin-top: 40px;
+  margin: 0 auto;
+  margin-top: 42px;
+  padding-left: 30px;
+  width: 280px;
 }
 
 .page-footer__social-networks {
   margin: 0;
   padding: 0;
-  margin-top: 42px;
+  margin-top: 39px;
 }
 
 @media (min-width: 768px) {
@@ -32,7 +35,10 @@
   }
 
   .page-footer__powered-by {
-    padding-top: 13px;
+    width: 130px;
+    padding-top: 47px;
+    padding-left: 7px;
+    margin: 0;
   }
 }
 
@@ -44,5 +50,13 @@
     padding-right: 60px;
     padding-left: 60px;
     padding-bottom: 45px;
+  }
+
+  .page-footer__hashtag-sedona {
+    width: 254px;
+  }
+
+  .page-footer__powered-by {
+    width: 247px;
   }
 }
