--- a/source/sass/page-header.scss
+++ b/source/sass/page-header.scss
@@ -18,5 +18,12 @@
 @media (min-width: 768px) {
   .page-header__logo {
     order: 0;
+    margin-top: -3px;
+  }
+}
+
+@media (min-width: 768px) {
+  .page-header__logo {
+    margin-bottom: -35;
   }
 }
