--- a/source/sass/features.scss
+++ b/source/sass/features.scss
@@ -167,11 +167,27 @@
 
   .features__title {
     margin-bottom: 20px;
+
+    &--souvenir {
+      padding-left: 19px;
+    }
+
+    &--souvenir-icon {
+      position: relative;
+
+      &::before {
+        left: 40px;
+      }
+    }
   }
 
   .features__text {
     width: 300px;
     margin: 0 auto;
     padding-left: 0;
+
+    &--eat {
+      padding-left: 11px;
+    }
   }
 }
