--- a/source/sass/page-form-header.scss
+++ b/source/sass/page-form-header.scss
@@ -5,7 +5,7 @@
 .page-form-header__content {
   text-transform: uppercase;
   margin: 0 auto;
-  margin-top: 45px;
+  margin-top: 38px;
   text-align: center;
   width: 255px;
 }
@@ -16,12 +16,31 @@
   margin: 0 auto;
   text-align: center;
   width: 280px;
-  margin-top: 40px;
+  margin-top: 26px;
+}
+
+@media (min-width: 768px) {
+  .page-form-header__content {
+    font-size: 30px;
+    width: 325px;
+    letter-spacing: 0.4;
+    margin-top: 74px;
+  }
+
+  .page-form-header__text {
+    margin-top: 30px;
+    width: 444px;
+    letter-spacing: 0.1;
+  }
 }
 
 @media (min-width: 1200px) {
   .page-form-header {
     width: 1200px;
     margin: 0 auto;
+  }
+
+  .page-form-header__content {
+    margin-top: 112px;
   }
 }
