--- a/source/sass/page-form.scss
+++ b/source/sass/page-form.scss
@@ -1,6 +1,6 @@
 .page-form__form {
   border-top: 1px solid $bordergray;
-  margin-top: 23px;
+  margin-top: 17px;
 }
 
 .page-form__promo {
@@ -10,5 +10,12 @@
 @media (min-width: 768px) {
   .page-form__form {
     border: none;
+    padding-bottom: 21px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .page-form__form {
+    padding-top: 59px;
   }
 }
