--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -3,6 +3,7 @@ $blue: #81b3d2;
 $lightgray: #f2f2f2;
 $gray: #eeeeee;
 $gray2: #eaeaea;
+$gray3: #e6e6e6;
 $shadowgray: #adb1b9;
 $black: #000000;
 $blacktrans: rgba(0, 0, 0, 0.5);
