--- a/source/sass/photo-promo.scss
+++ b/source/sass/photo-promo.scss
@@ -13,7 +13,7 @@
   background-repeat: no-repeat;
   background-size: 230px 39px;
   background-position: 50%;
-  min-height: 210px;
+  min-height: 144px;
 }
 
 @media (min-width: 768px) {
@@ -28,7 +28,18 @@
   }
 
   .photo-promo__img {
-    background-size: 460px 78px;
+    background-size: 490px 80px;
+    padding-top: 123px;
+  }
+
+  .photo-promo__content {
+    font-size: 30px;
+    line-height: 26px;
+    width: 320px;
+  }
+
+  .photo-promo__text {
+    width: 440px;
   }
 }
 
@@ -41,5 +52,9 @@
     background-position: 50% bottom;
     text-align: center;
     width: 1200px;
+  }
+
+  .photo-promo__img {
+    padding-top: 137px;
   }
 }
