--- a/source/sass/photo.scss
+++ b/source/sass/photo.scss
@@ -27,6 +27,10 @@
   }
 }
 
+.photo__inscription {
+  margin-top: 14px;
+}
+
 .photo__name {
   text-transform: uppercase;
   margin: 0;
@@ -36,6 +40,23 @@
   display: block;
   color: $darkgray;
   margin-bottom: 5px;
+}
+
+.photo__likes {
+  position: relative;
+  padding-top: 3px;
+  padding-left: 36px;
+  padding-bottom: 17px;
+
+  &::before {
+    content: "";
+    background: url("../img/icon-like.svg") no-repeat;
+    position: absolute;
+    width: 22px;
+    height: 22px;
+    top: 2px;
+    left: 0;
+  }
 }
 
 @media (min-width: 768px) {
@@ -50,15 +71,19 @@
 
   .photo__inscription {
     background-color: $lightgray;
-    width: 324px;
+    width: 304px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     height: 53px;
     justify-content: center;
+    margin-top: 0;
+    padding-top: 15px;
+    padding-left: 20px;
+    padding-bottom: 11px;
 
     &--top-photo {
-      width: 648px;
+      width: 629px;
     }
 
     &--left-photo {
@@ -68,7 +93,15 @@
 
   .photo__likes {
     width: 33px;
-    align-self: end;
+    align-self: flex-end;
+    padding-left: 22px;
+    margin-right: 20px;
+    padding-top: 13px;
+
+    &::before {
+      top: 13px;
+      left: -10px;
+    }
   }
 
   .photo__img {
@@ -81,6 +114,7 @@
       background-image: url("../img/photo-sunset-tablet@1x.jpg");
       background-size: 648px 402px;
       width: 648px;
+      padding-top: 176px;
     }
 
     &--photo-cactus {
@@ -108,11 +142,13 @@
 
   .photo__inscription {
     background-color: $blacktrans;
-    width: 400px;
-    margin-top: -53px;
+    width: 380px;
+    margin-top: -78px;
+    padding-top: 15px;
 
     &--top-photo {
-      width: 1200px;
+      width: 1180px;
+      padding-top: 11px;
     }
   }
 
@@ -136,6 +172,7 @@
       background-image: url("../img/photo-sunset-desktop@1x.jpg");
       background-size: 1200px 402px;
       width: 1200px;
+      padding-top: 135px;
     }
 
     &--photo-cactus {
