--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,9 +1,17 @@
 $white: #ffffff;
 $blue: #81b3d2;
+$blue2: #669ec0;
+$darkblue: #5496bd;
 $lightgray: #f2f2f2;
 $gray: #eeeeee;
 $gray2: #eaeaea;
 $gray3: #e6e6e6;
+$gray4: #b2b2b2;
+$gray5: #d5d5d5;
+$gray6: #a4a4a4;
+$lightbrown: #d6d0cc;
+$brown: #766357;
+$brown2: #604e43;
 $shadowgray: #adb1b9;
 $black: #000000;
 $blacktrans: rgba(0, 0, 0, 0.5);
