--- a/source/sass/form.scss
+++ b/source/sass/form.scss
@@ -68,6 +68,8 @@
 }
 
 .form__label {
+  outline: none;
+
   &--personal-data {
     text-transform: uppercase;
     color: #333333;
@@ -88,9 +90,19 @@
       display: block;
       width: 22px;
       height: 22px;
-      background: $bordergray;
-      border: 17px solid $bordergray;
+      background: $lightgray;
+      border: 17px solid $lightgray;
       border-radius: 5px;
+    }
+
+    &:hover::before {
+      background-color: $gray3;
+      border: 17px solid $gray3;
+    }
+
+    &:active::before {
+      background-color: $gray5;
+      border: 17px solid $gray5;
     }
   }
 
@@ -108,9 +120,19 @@
       display: block;
       width: 22px;
       height: 22px;
-      background-color: $bordergray;
-      border: 17px solid $bordergray;
+      background-color: $lightgray;
+      border: 17px solid $lightgray;
       border-radius: 50%;
+    }
+
+    &:hover::before {
+      background-color: $gray3;
+      border: 17px solid $gray3;
+    }
+
+    &:active::before {
+      background-color: $gray5;
+      border: 17px solid $gray5;
     }
   }
 
@@ -123,15 +145,27 @@
 }
 
 .form__input {
+  outline: none;
+
+  &:hover {
+    background-color: $gray3;
+    border: 4px solid $gray3;
+  }
+
+  &:focus {
+    background-color: $white;
+    border: 4px solid $gray3;
+  }
+
   &--personal-data {
     background-color: $lightgray;
     color: $black;
-    border: none;
-    padding-left: 20px;
+    padding-left: 17px;
     margin-left: 16px;
     width: 191px;
-    padding-top: 16px;
-    padding-bottom: 16px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    border: 4px solid $lightgray;
 
     &::placeholder {
       color: $black;
@@ -154,12 +188,12 @@
   &--contact-information {
     background-color: $lightgray;
     color: $black;
-    border: none;
     width: 279px;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    padding-left: 20px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 19px;
     margin-top: 7px;
+    border: 4px solid $lightgray;
 
     &::placeholder {
       color: $black;
@@ -169,7 +203,7 @@
 }
 
 .form__input--checkbox:checked ~ label::before {
-  background: $bordergray  url("../img/icon-tick.svg") no-repeat;
+  background: $lightgray  url("../img/icon-tick.svg") no-repeat;
 }
 
 .form__input--radio:checked ~ label::before {
@@ -180,10 +214,10 @@
   position: relative;
   display: block;
   margin: 0;
-  margin-top: -57px;
+  margin-top: -58px;
   padding: 0;
   width: 57px;
-  height: 57px;
+  height: 58px;
   color: $white;
   background-color: $gray3;
   margin-left: 221px;
@@ -214,13 +248,14 @@
 }
 
 .form__textarea {
+  outline: none;
   color: $black;
-  width: 276px;
+  width: 280px;
   min-height: 155px;
   background-color: $lightgray;
-  border: none;
-  padding-left: 20px;
-  padding-top: 13px;
+  padding-left: 17px;
+  padding-top: 8px;
+  border: 4px solid $lightgray;
 
   &::placeholder {
     font-family: "PT Sans", "Arial", sans-serif;
@@ -229,6 +264,16 @@
     line-height: 26px;
     color: $black;
     opacity: 1;
+  }
+
+  &:hover {
+    background-color: $gray3;
+    border: 4px solid $gray3;
+  }
+
+  &:focus {
+    background-color: $white;
+    border: 4px solid $gray3;
   }
 }
 
