--- a/source/sass/site-list.scss
+++ b/source/sass/site-list.scss
@@ -1,7 +1,4 @@
 .site-list {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
   list-style: none;
   text-align: center;
   width: 100%;
@@ -11,14 +8,24 @@
   background-color: $blue;
   border-bottom: 1px solid $border-bottom;
   border-top: 1px solid $border-top;
-  padding-top: 6px;
-  padding-bottom: 8px;
 }
 
 .site-list__item-link {
+  display: block;
   color: $white;
   text-decoration: none;
   text-transform: uppercase;
+  padding-top: 6px;
+  padding-bottom: 8px;
+
+  &:hover {
+    background-color: $blue2;
+  }
+
+  &:active {
+    background-color: $darkblue;
+    color: $blue;
+  }
 }
 
 .site-list--left {
@@ -27,6 +34,7 @@
 
 @media (min-width: 768px) {
   .site-list {
+    display: flex;
     flex-direction: row;
     justify-content: space-around;
     width: 40%;
@@ -43,16 +51,38 @@
     color: $black;
     font-size: 14px;
     line-height: 26px;
+
+    &:hover {
+      background-color: $white;
+      color: $blue;
+    }
+
+    &:active {
+      background-color: $white;
+      color: $gray4;
+    }
+
+    &--active {
+      color: $brown;
+
+      &:hover {
+        color: $brown2;
+      }
+
+      &:active {
+        color: $lightbrown;
+      }
+    }
   }
 
   .site-list--left {
     order: -1;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 8px;
+    padding-bottom: 8px;
   }
 
   .site-list--right {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 8px;
+    padding-bottom: 8px;
   }
 }
