--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -21,3 +21,5 @@ $backgroundblue: #4478a4;
 $border-bottom: #678fa8;
 $border-top: #9ac2db;
 $video-background: #9fb413;
+$retina-dpi: 144dpi;
+$retina-dppx: 1.5dppx;
