--- a/source/sass/map.scss
+++ b/source/sass/map.scss
@@ -7,6 +7,11 @@
   background-position: 50% bottom;
   background-repeat: no-repeat;
   min-height: 350px;
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/bg-map-mobile@2x.jpg");
+    background-size: 320px 350px;
+  }
 }
 
 @media (min-width: 768px) {
@@ -14,6 +19,11 @@
     background-image: url("../img/bg-map-tablet@1x.jpg");
     background-size: 768px 350px;
     margin-top: 58px;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/bg-map-tablet@2x.jpg");
+      background-size: 768px 350px;
+    }
   }
 }
 
@@ -21,5 +31,10 @@
   .map {
     background-image: url("../img/bg-map-desktop@1x.jpg");
     background-size: 1200px 350px;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/bg-map-desktop@2x.jpg");
+      background-size: 1200px 350px;
+    }
   }
 }
